  - New /ta merging commands, courtesy of Gamer153 with PR #5491. (First-Time Contributor!)
  - New Command: /ta town [townname] merge [townname] - Asks the 2nd town if they want to merge with the first.
  - New Command: /ta town [townname] forcemerge [townname] - Forcefully merges the 2nd town into the first.
  - New Command: /ta nation [nationname] merge [nationname] - Asks the 2nd nation if they want to merge with the first.
  - New Command: /ta nation [nationname] forcemerge [nationname] - Forcefully merges the 2nd nation into the first.
  - Make town neutrality cost appear on /towny prices for #5500.
  - Add town and nation neutrality costs to their respective status screens.
    - Closes #5500.
  - Reorganization and cleanup of Town, Nation, and TownySettings, courtesy of FlagCourier with PR #5493.
  - Made it possible for the {townname} placeholder to be used in the wilderness_title and wilderness_subtitle messages.
  - Townyperms.yml nations' default rank will automatically be given towny.command.nation.spawn.
  - Add 2 convenience methods to PreNewTownEvent, courtesy of Warriorrrr with PR #5504.
  - Fix possible tab completion NPE, courtesy of Warriorrrr with PR #5506.
  - Allow lava_cauldrons to kill minecarts.
    - Closes #5503.
  - Call the pre new town event after any confirmations are confirmed, courtesy of Warriorrrr with PR #5508.
  - API: Add tab-completion helper methods to TownyAPI.
0.97.5.2:
  - Fix language strings added to Towny via the API throwing errors for players using un-translated locales. 
  - New Command: /ta nation [nationname] transfer [townname]
    - Places the given town into the given nation, removing any old nation if needed.
    - Works toward closing #4906.
  - Fix bonemealing trees and grass not being aware of the player involved, and their permissions.
    - Closes #5517.
  - API: Add TownPreClaimEvent to initial TownBlock claimed during new Town code.
  - Fix lang\global.yml files generating empty on new installs.